@@ -1,3 +1,8 @@
+2008-08-14  Jonathan Tai  <jon@tgpsolutions.com>
+
+	* strongwind/accessibles.py: Bind FontChooser dialog; add logging to
+	  previously-bound GtkColorSelectionDialog. (#546865, César Octavio López Natarén)
+
 2008-07-30  Jonathan Tai  <jon@tgpsolutions.com>
 
 	* strongwind/accessibles.py: In TreeTable's select() and activate()
